--- a/maches.css
+++ b/maches.css
@@ -1,7 +1,7 @@
 body{
     overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
- 
+    min-width: 801px;
 }
 main{
     /* height: 100%; */
@@ -30,9 +30,6 @@ main{
 }
 .top-text{
     align-items: center;
-}
-.top-image{
-    width: 100%;
 }
 .top-container .top-image img{
     width: 581px;
@@ -67,7 +64,7 @@ main{
     margin-top: 40px;
 }
 
-.fa-solid .fa-angle-right {
+.fa-solid.fa-angle-right {
     font-size: 20px;
     margin-left: 10px;
 }
@@ -75,57 +72,9 @@ main{
 /* Mid Section Start */
 .mid-section{
     margin-top: 140px;
+    margin-bottom: 140px;
 }
-.blogs{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 24px;
-    grid-row-gap: 24px;
-}
-.blog{
-    width: 310px;
-    height: 400px;
-    border: 1px solid rgb(230, 228, 228);
-    border-radius: 10px;
-}
-.blog-text{
-    font-size: 18px;
-    margin: 20px;
-}
-.blog-info{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 0px;
-    align-content: center;
-}
-.blog-info div {
-    width: 71px;
-    height: 26px;
-    display: flex;
-    align-items: center;
-    margin-left: 15px;
-}
-.numbers {
-    margin-left: 10px;
-}
-.thumbnail img{
-    width: 312px;
-    height: 175px;
-}
-.transfer-button{
-    border: 2px solid black;
-    border-radius: 10px;
-    height: 30px;
-    width: 90px;
-    text-align: center;
-    margin: 10px 0px 0px 15px;
 
-}
-.transfer-button a{
-    text-decoration: none;
-    color: #000;
-    align-content: center;
-}
 .side-menu{
     background: #161616;
     border-radius: 10px;
@@ -146,7 +95,11 @@ main{
 .menu a{
     font-size: 20px;
     text-decoration: none;
-    color: black; 
+    color: black;
+    /* padding: 15px 30px;
+    border-radius: 10px;
+    background-color: yellow; */
+    
 }
 .menu:hover{
     background-color: red;
@@ -159,29 +112,68 @@ main{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     width: 1321px;
-    height: 1394px;
+    overflow-x: hidden;
 }
-.btn{
-    text-align: center;
-    justify-content: center;
+.all-flags{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
     align-items: center;
 }
-
-.view-all-button{
-    height: 100px;
-    margin-top: 50px;
+.matches{
+    display: flex;
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr); */
+    /* border: 1px solid lightblue; */
+    border-radius: 25px;
+    width: 312px;
+    height: 242px;
+    
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 2px rgb(179, 179, 179); 
 }
-.view-all-button a{
-    background-color: red;
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 16px 25px;
-    border-radius: 5px;
-    visibility: hidden;
+.match{
+    width: 260px;
+    height: 140px;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.flags{
+    display: flex;
+    margin: 9.9px;
+}
+.flags div{
+    margin: 5px; 
+}
+.flags img{
+    width: 93px;
+    height: 54.42px;
+}
+
+.match .vs{
+    text-align: center;
+    margin-top: -22px;
+}
+.vs p{
+    margin-top: -15px;
+}
+.flag-vs h2{
+    font-size: 26px;
+    width: 26px;
+    height: 24px;
+    margin-top: 12px;
+}
+.flags .flag-vs{
+    align-items: center;
+    padding-top: -0px;
 }
 
 /* Footer Start */
+
 footer {
     background-color: #030003;
     color: #FFFFFF;
@@ -191,13 +183,10 @@ footer {
     text-align: center;
     padding-top: 94px;
     border-radius: 30px;
-
-
 }
 
 .goal {
     align-items: center;
-
 }
 
 footer h1 {
@@ -213,35 +202,63 @@ footer a {
     color: aliceblue;
     margin: 25px 50px 25px 50px;
     text-decoration: none;
+
 }
 
-hr.style-one {
-    border: 0;
-    height: 1px;
-    background: #333;
-    background-image: linear-gradient(to right, #333, #ccc, #333);
+footer hr {
+    border: .5px solid #FFFFFF;
+    margin-top: 40px;
+    width: 1320px;
 }
-.fa-brands{
+
+.fa {
     padding: 5px;
     width: 25px;
     height: 25px;
-    border-radius: 25%;
+    border-radius: 50%;
     text-align: center;
     text-decoration: none;
     margin: 25px 20px;
-    font-size: 25px;
 }
 
-/*-----------------------
-Media Queries for Mobile 
--------------------------*/
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-google {
+    background: #dd4b39;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+
+/* Media Queries For Mobie */
 @media only screen and (max-width: 680px) {
-    
-    body {
-        margin: auto;
+    body{
+        margin: 0% -15% 0% -9%;
         justify-content: center;
-        height: 4500px;
-        max-width: 600px;
+    }
+    .main{
+        max-width: 680px;
     }
     .top-container{
         display: grid;
@@ -255,8 +272,7 @@ Media Queries for Mobile
         left: 21px;
         top: 0px;
         /* justify-content: center; */
-        /* margin-left: -10px; */
-        
+        margin-left: -10px;
     }
     .top-text{
         /* position: absolute; */
@@ -292,10 +308,7 @@ Media Queries for Mobile
         justify-content: center;
         text-align: center;
     }
-    .blogs{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-    }
+
     .mid-container{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -313,66 +326,25 @@ Media Queries for Mobile
     .menu{
         border: 1px solid lightslategray;
     }
-    footer {
-        background-color: #030003;
-        color: #FFFFFF;
-        margin: 0% 8%;
-        width: 334px;
-        height: 450px;
-        text-align: center;
-        padding-top: 20px;
-        border-radius: 20px;
-    }
-    .goal {
-        align-items: center;
-
-    }
-    footer h1 {
-        margin-top: 20px;
-        font-size: 24px;
+    .all-flags{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
     }
 
-    footer a {
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: auto;
-        color: aliceblue;
-        margin: 25px 50px 25px 50px;
-        text-decoration: none;
-    }
-
-    footer hr {
-        border: .1x solid #FFFFFF;
-        opacity: 5%;
-        margin-top: 40px;
-        width: 320px;
-    }
-
-    .fa-brands{
-        padding: 5px;
-        width: 25px;
-        height: 25px;
-        border-radius: 25%;
-        text-align: center;
-        text-decoration: none;
-        margin: 25px 20px;
-        font-size: 20px;
-    }
 }
 
 /* Media Queries for Tab */
 @media only screen and (min-width: 681px) and (max-width: 800px) {
     .main{
         max-width: 800px;
-        max-height: 2400px;
-        margin-bottom: 200px;
+        max-height: 2500px;
     }
     .top-container{
         /* position: absolute; */
         width: 750x;
         height: 400px;
+        /* top: 0px;
+        justify-content: center; */
     }
     .top-container{
         width: 750px;
@@ -388,13 +360,12 @@ Media Queries for Mobile
        flex-direction: row;
        width: 750px;
        text-align: center;
-       padding: 0;
     }
    
     .top-container .top-text h1{
         font-style: normal;
         font-weight: 700;
-        font-size: 30px;
+        font-size: 40px;
         line-height: 33px;
         text-align: center;
     }
@@ -432,12 +403,9 @@ Media Queries for Mobile
     .menu{
         border: 1px solid lightslategray;
     }
-    .blogs{
+    .all-flags{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-    }
-    #hidden-blog{
-        display: none;
     }
     footer{
         width: 750px;
@@ -451,10 +419,6 @@ Media Queries for Mobile
         margin-top: 20px;
         font-size: 24px;
     }
-    .view-all-button a{
-        visibility: visible;
-    }
-
     
 
 }
